changed url listened in index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script>
-            var socket = io.connect('http://192.168.0.23:3000');
+            var socket = io.connect('http://tchati.herokuapp.com/');
             var allMessages = document.getElementById("main_wrapper");
 
             var pseudo = prompt('Quel est votre pseudo ?');
