--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script>
+//            var socket = io.connect('http://192.168.0.23:3000');
             var socket = io.connect('http://tchati.herokuapp.com/');
             var allMessages = document.getElementById("main_wrapper");
 
             var pseudo = prompt('Quel est votre pseudo ?');
+            while (pseudo.length < 1 || pseudo === false){
+                pseudo = prompt('Votre pseudo ne peut être vide');
+            }
             socket.emit('petit_nouveau', pseudo);
 
             socket.on('new_arrived', function (pseudo) {
@@ -84,6 +88,16 @@
 
                 allMessages.appendChild(newMessage);
             });
+
+            socket.on('user_disconnected', function (message) {
+                var newMessage = document.createElement("p");
+                var textNode = document.createTextNode(message);
+
+                newMessage.setAttribute("class", "connect");
+                newMessage.appendChild(textNode);
+
+                allMessages.appendChild(newMessage);
+            })
         </script>
 
     </body>
